syntax = "proto3";

package pb;
option go_package = "api-gateway/pb";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message User {
  uint32 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  User user = 1;
}
